--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -4,6 +4,18 @@ Stylesheet for CSS Demo
 
 */
 
+/* ---------------Box Sizing----------------- */
+
+html {
+    box-sizing: border-box;
+  }
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+  }
+  
+
 body{
     background-color:coral
 }
