--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -17,5 +17,43 @@ html {
   
 
 body{
-    background-color:coral
+    background-color:coral;
+    font-family: 'Roboto', sans-serif;
+    margin:0;
+}
+
+header.primary {
+  background-color: cadetblue;
+  text-align: center;
+  color:#ffffff;
+  padding: 40px;
+  text-shadow: 4px 2px #000000;
+}
+
+header.primary h1 a{
+  color:#ffffff;
+  text-decoration: none;
+}
+
+header.primary h2{
+  font-size: 1.4rem;
+  /* Top | left/right | Bottom*/
+  margin:20px auto 40px;
+}
+
+header.primary nav{}
+header.primary nav ul{
+  /*removes extra space for list ittem attachments*/
+  padding:0;
+}
+header.primary nav ul li{
+  list-style-type: none;
+}
+header.primary nav ul li a{
+  color:#ffffff;
+  text-decoration: none;
+  background-color: #000000;
+  padding: 8px 16px;
+  margin-bottom: 1rem;
+  display: inline-block;
 }
