--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -15,7 +15,17 @@ html {
     box-sizing: inherit;
   }
   
+/*utility Classes*/
 
+.container{
+    width:70vw;
+    margin:40px auto;
+  }
+
+  img{
+    max-width: 100%;
+  }
+/* Global Styles*/
 body{
     background-color:coral;
     font-family: 'Roboto', sans-serif;
@@ -56,4 +66,86 @@ header.primary nav ul li a{
   padding: 8px 16px;
   margin-bottom: 1rem;
   display: inline-block;
+}
+
+#content{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#content article.post{
+  width: 30%;
+  box-shadow:0 4px 8px rgba(0,0,0,.4);
+  padding: 10px;
+  border-radius: 4px;
+  font-size: .7rem;
+  transition: .5s;
+}
+
+#content article.post:hover{
+  box-shadow:0 8px 16px rgba(0,0,0,.4);
+}
+
+time.post-date, figcaption, .post-meta{
+  text-transform: uppercase;
+  color:#c0c0c0;
+}
+
+.post figure{
+  margin:0;
+}
+
+.post img{
+  border:1px solid #c0c0c0;
+  padding:2px;
+  margin: 5px 0;
+}
+
+.post a{
+  color:cadetblue;
+}
+
+.post a:hover .post a:active{
+  text-decoration:none;
+}
+
+aside[role="complementary"]{
+  background-color:red;
+  color:#c0c0c0;
+  padding:1.8rem;
+}
+
+aside div.container{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+aside article.widget{
+  width: 44%
+}
+
+article.widget a{
+  color:white;
+  display:block;
+  margin-top:1.2rem;
+  text-align: right;
+}
+
+article.widget footer{
+  display:none;
+}
+
+#colophon{
+  background-color: red;
+}
+
+#colophon h6{
+  padding: 20px;
+  margin: 0;
+  text-align: center;
+  color:fff;
+  font-size:.8rem;
+  text-transform:uppercase;
 }
